layout and color changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -613,28 +613,28 @@ input[type="submit"][disabled]:focus {
 
 .overlay {
     background-color: rgba(0, 0, 0, .8);
-    padding: 110px 0px;
+    padding: 60px 0px;
     overflow: hidden;
 }
 
 .overlay.home-six-overlay {
     /* fallback */
-    background-color: rgba(240, 36, 25, .7);
+    background-color: rgba(35, 47, 62, .8);
 
     /* Safari 4-5, Chrome 1-9 */
-    background: -webkit-gradient(linear, left top, right top, from(rgba(240, 36, 25, .7)), to(rgba(248, 214, 21, .7)));
+    background: -webkit-gradient(linear, left top, right top, from(rgba(35, 47, 62, .9)), to(rgba(35, 47, 62, .7)));
 
     /* Safari 5.1, Chrome 10+ */
-    background: -webkit-linear-gradient(left, rgba(248, 214, 21, .7), rgba(240, 36, 25, .7));
+    background: -webkit-linear-gradient(left, rgba(35, 47, 62, .7), rgba(35, 47, 62, .9));
 
     /* Firefox 3.6+ */
-    background: -moz-linear-gradient(left, rgba(248, 214, 21, .7), rgba(240, 36, 25, .7));
+    background: -moz-linear-gradient(left, rgba(35, 47, 62, .7), rgba(35, 47, 62, .9));
 
     /* IE 10 */
-    background: -ms-linear-gradient(left, rgba(248, 214, 21, .7), rgba(240, 36, 25, .7));
+    background: -ms-linear-gradient(left, rgba(35, 47, 62, .7), rgba(35, 47, 62, .9));
 
     /* Opera 11.10+ */
-    background: -o-linear-gradient(left, rgba(248, 214, 21, .7), rgba(240, 36, 25, .7));
+    background: -o-linear-gradient(left, rgba(35, 47, 62, .7), rgba(35, 47, 62, .9));
 }
 
 .section-header h3 {
@@ -1048,7 +1048,7 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
     /*background-image: url(../../images/backgrounds/bg-banner.jpg);*/
     background-position: 50% 50%;
     background-size: cover;
-    height: 975px;
+    height: 650px;
     position: relative;
     overflow: hidden;
 }
@@ -1582,27 +1582,27 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
 
 .banner-seven .banner-overlay {
     /* fallback */
-    background-color: rgba(240, 36, 25, .7);
+    background-color: rgba(35, 47, 62, .8);
 
     /* Safari 4-5, Chrome 1-9 */
-    background: -webkit-gradient(linear, left top, right top, from(rgba(240, 36, 25, .7)), to(rgba(248, 214, 21, .7)));
+    background: -webkit-gradient(linear, left top, right top, from(rgba(35, 47, 62, .9)), to(rgba(35, 47, 62, .7)));
 
     /* Safari 5.1, Chrome 10+ */
-    background: -webkit-linear-gradient(left, rgba(248, 214, 21, .7), rgba(240, 36, 25, .7));
+    background: -webkit-linear-gradient(left, rgba(35, 47, 62, .7), rgba(35, 47, 62, .9));
 
     /* Firefox 3.6+ */
-    background: -moz-linear-gradient(left, rgba(248, 214, 21, .7), rgba(240, 36, 25, .7));
+    background: -moz-linear-gradient(left, rgba(35, 47, 62, .7), rgba(35, 47, 62, .9));
 
     /* IE 10 */
-    background: -ms-linear-gradient(left, rgba(248, 214, 21, .7), rgba(240, 36, 25, .7));
+    background: -ms-linear-gradient(left, rgba(35, 47, 62, .7), rgba(35, 47, 62, .9));
 
     /* Opera 11.10+ */
-    background: -o-linear-gradient(left, rgba(248, 214, 21, .7), rgba(240, 36, 25, .7));
+    background: -o-linear-gradient(left, rgba(35, 47, 62, .7), rgba(35, 47, 62, .9));
 
 }
 
 .banner-seven .seven-content-left {
-    height: 975px;
+    height: 750px;
     position: relative;
     overflow: hidden;
     max-width: 640px;
@@ -1619,8 +1619,8 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
 .banner-seven .seven-content-left span {
     font-family: 'poppins', sans-serif;
     font-weight: 700;
-    font-size: 190px;
-    line-height: 170px;
+    font-size: 80px;
+    line-height: 70px;
     color: #fff;
     text-transform: uppercase;
 }
@@ -1636,7 +1636,7 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
 }
 
 .banner-seven .seven-content-right-bg {
-    height: 975px;
+    height: 750px;
     position: relative;
 }
 
@@ -3156,7 +3156,11 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
 }
 
 .schedules-six .tab-content table th {
-    background-color: #f5b429;
+    background-color: #ff9900;
+}
+
+.schedules-break {
+    background-color: #ff990033;
 }
 
 .schedules-six .tab-content table td:hover {
@@ -3266,15 +3270,15 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
 }
 
 .pricing .pricing-item.first {
-    background-color: #92278f;
+    background-color: #fff;
 }
 
 .pricing .pricing-item.second {
-    background-color: #ff9822;
+    background-color: #fff;
 }
 
 .pricing .pricing-item.third {
-    background-color: #65ac4c;
+    background-color: #fff;
 }
 
 .pricing .pricing-item .pricing-header {
@@ -3577,27 +3581,27 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
 }
 
 .pricing-six .pricing-item.first .pricing-header {
-    background-color: #e84b3a;
+    background-color: #ff9900;
 }
 
 .pricing-six .pricing-item.second .pricing-header {
-    background-color: #fc7f0c;
+    background-color: #ff9900;
 }
 
 .pricing-six .pricing-item.third .pricing-header {
-    background-color: #f5b429;
+    background-color: #ff9900;
 }
 
 .pricing-six .pricing-item.first .pricing-options p span {
-    background-color: #e84b3a;
+    background-color: #ff9900;
 }
 
 .pricing-six .pricing-item.second .pricing-options p span {
-    background-color: #fc7f0c;
+    background-color: #ff9900;
 }
 
 .pricing-six .pricing-item.third .pricing-options p span {
-    background-color: #f5b429;
+    background-color: #ff9900;
 }
 
 .pricing-six .pricing-item .pricing-options p span.off {
@@ -3605,15 +3609,15 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
 }
 
 .pricing-six .pricing-item.first .pricing-button a {
-    color: #e84b3a;
+    color: #ff9900;
 }
 
 .pricing-six .pricing-item.second .pricing-button a {
-    color: #fc7f0c;
+    color: #ff9900;
 }
 
 .pricing-six .pricing-item.third .pricing-button a {
-    color: #f5b429;
+    color: #ff9900;
 }
 
 .pricing-seven {
@@ -3692,7 +3696,7 @@ nav.main-menu.menu-six.menu-fixed.dark-home-defult.menu-six-bg {
 .travel .travel-map {
     height: 500px;
     width: 100%;
-    border: 6px solid #65ac4c;
+    border: 6px solid #232f3e;
 }
 
 .travel-six .info-item .icon {
