--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -19,7 +19,7 @@ header.style-2 {
     margin-top: 90px;
 }
 .bgc-trans {
-    background: rgba(232, 175, 58, 0.2);
+    background: #232f3e;
     -webkit-box-shadow: 0px 0px 4px rgb(0 0 0 / 46%);
     box-shadow: 0px 0px 4px rgb(0 0 0 / 46%);
 }
@@ -28,7 +28,7 @@ header.style-2 {
     color: #fff;
 }
 .bgc-trans.animated {
-    background: #e84b3a;
+    background: #232f3e;
 }
 .bgc-trans .menu-button {
     color: #e84b3a;
